--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /build/
 src/main/resources/docs/
 
+# Java compiled files
+*.class
+
 # MacOS custom attributes files created by Finder
 .DS_Store
 *.iml
