Change build.gradle file to create a JAR File

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ application {
 shadowJar {
     archiveBaseName = "bartholomew"
     archiveClassifier = null
+    archiveFileName = 'bartholomew.jar'
 }
 
 run{
